--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -53,9 +53,9 @@ admin_14 : "Belirli bir numaraya atlamak için sırada en az 2 parça gerekir. /
 admin_15 : "Verdiğiniz değer için sırada yeterli parça yok. Lütfen 1 ile {0} arasında bir sayı seçin"
 admin_16 : "Belirli bir parçaya geçilemedi.\n\nSırayı /sira İle Kontrol Edin"
 admin_17 : "{0}.. Lütfen bekleyin. 🔮"
-admin_18 : "Yönetici Listesi Bulunamadı\n\nLütfen yönetici listesini /admincache veya /reload yoluyla yeniden yükleyin. 🔮"
+admin_18 : "Yönetici Listesi Bulunamadı\n\nLütfen yönetici listesini /admincache veya /reload yoluyla yeniden yükleyin. ❤️‍🩹"
 admin_19 : "Bunu gerçekleştirmek için sesli sohbet haklarına sahip yönetici olmanız gerekir.\nZaten yöneticiyseniz, /admincache aracılığıyla admincache'i yeniden yükleyin. 🔮"
-admin_20 : "**Yönetici önbelleği başarıyla yeniden yüklendi.** 🔮"
+admin_20 : "**Yönetici önbelleği başarıyla yeniden yüklendi.** ❤️‍🩹"
 admin_21 : "Sırada karıştırılacak bir şey yok ❌"
 admin_22 : "Karıştırılamadı.\n\nSırayı kontrol edin: /sira"
 admin_23 : "**Sıra Karıştırıldı: {0}**\n\nKarıştırılan sırayı kontrol edin: /sira"
@@ -140,9 +140,9 @@ cplay_5 : "Yalnızca Kanallar Desteklenir."
 cplay_6 : "Kanalı bu gruba bağlamak için[{0}] kanalın **Sahibi** olmanız gerekir.\n**Kanal Sahibi:** @{1}\n\nAlternatif olarak grubunuzu o kanala bağlayabilirsiniz. ve ardından `/channelplay bağlantılı ile bağlanmayı deneyin`"
 
 #Play
-play_1 : "🔄 **Parça İndiriliyor.. Lütfen Bekleyin...** 🥀"
+play_1 : "**Parça İndiriliyor.. Lütfen Bekleyin.** 🥀"
 play_2 : "**🏷Kanal Oynatma Modu**\n🔮 Sorgu İşleniyor... Lütfen Bekleyin!\n\n**Bağlı Kanal:** {0}"
-play_3 : "Sorgu İşlenemedi! Başka Bir Parça Oynatmayı Deneyiniz. 🔮"
+play_3 : "Sorgu İşlenemedi! Başka Bir Parça Oynatmayı Deneyiniz. 🥀"
 play_4 : "🖇 **Yalnızca Yöneticiler Oynatır**\nYalnızca Yöneticiler ve Yetkilendirilmiş Kullanıcılar bu grupta müzik çalabilir.\n\nModu /playmode aracılığıyla değiştirin ve zaten yöneticiyseniz, /admincache aracılığıyla admincache'i yeniden yükleyin"
 play_5 : "Ses dosyası işlenemedi.\n\nSes Dosyası Boyutu 100 mb'den Küçük Olmalı 🔮"
 play_6 : "**Süre Sınırı Aşıldı**\n\n**İzin Verilen Süre: **{0} dakika\n**Alınan Süre:** {1} dakika(s)"
@@ -151,8 +151,8 @@ play_8 : "Geçerli Bir Video Dosyası Uzantısı Değil!\n\n**Desteklenen Biçim
 play_9 : "Video Dosya Boyutu 1 GB'den Küçük Olmalı. 🔮"
 play_10 : "**Youtube Oynatma Listesi Özelliği**\n\nYoutube Oynatma Listesinin tamamını oynatmak istediğiniz Modu seçin"
 play_11 : "🥀Başlık: **{0}\n\n⌛Süre:** {1} Dakika"
-play_12 : "**Spotify Oynatma Listeleri**\n\n👉Talep Eden:- {0}"
-play_13 : "**Apple Oynatma Listeleri**\n\n👉Talep Eden:- {0}"
+play_12 : "**Spotify Oynatma Listeleri**\n\n👤Talep Eden:- {0}"
+play_13 : "**Apple Oynatma Listeleri**\n\n👤Talep Eden:- {0}"
 play_14 : "**URL doğrulanamıyor.**\nBot, bu url'nin şu platformlardan birine ait olup olmadığını merak ediyor: Youtube, AppleMusic, Spotify, Resso ve Soundcloud.\n\nM3u8 veya Uzak Bağlantılar için /stream'i kullanabilirsiniz.."
 play_15 : "**Canlı Yayın Algılandı**\n\nSistemler, stream bağlantınızı canlı yayın olarak algıladı. Canlı yayın oynamak istiyormusunuz ?"
 play_16 : "Parça ayrıntıları getirilemedi. Başka şarkı deneyin. 🔮"
@@ -211,7 +211,7 @@ ping_2 : "**🔮 {0} 🔮\nGecikme: `{1}` ms\nUpTime: {2}\nDepolama: {3}\nCpu: {
 song_1 : "YouTube'dan Müzik veya Video'yu yalnızca özel sohbette indirebilirsiniz. Lütfen beni özel sohbette başlat. 🔮"
 song_2 : "**Kullanım:**\n/indir [Şarkı Adı] veya [Youtube Link]\n\n(**Örnek:** /indir Neşet Ertaş Gönül Dağı)"
 song_3 : "Canlı Bağlantı Algılandı. Canlı youtube videolarını indiremiyorum. 🔮"
-song_4 : "**🔮Parça: {0}**\n\n**İndirmek istediğiniz türü seçin.**"
+song_4 : "**🥀Parça: {0}**\n\n**İndirmek istediğiniz türü seçin.**"
 song_5 : "Geçerli bir Youtube Bağlantısı değil"
 song_6 : "Format Alınıyor... 🔮\n\nLütfen Bekleyin.. ✅"
 song_7 : "Video için kullanılabilir biçimler alınamadı. Lütfen başka bir parça deneyin."
@@ -224,13 +224,13 @@ song_11 : "**Yükleme Başladı\n\nYükleme hızı yavaş olabilir. Lütfen bekl
 queue_1 : "**Lütfen Bekleyin.. Sıra Alınıyor...** 🔮"
 queue_2 : "Sırada Malesef Hiçbir Şey Yok. 😔"
 queue_3 : "<u>**Sıradaki Parçalar:</u>**  [Sıradaki Parçalara Burdan Bakabilirsiniz]({0})"
-queue_4 : "🥀 Sıraya eklendi **#{0}\n\n🥀Parça:** {1}\n**⌛Süre:** {2}\n👉**Talep Eden: {3}**"
+queue_4 : "❤️‍🩹 Sıraya eklendi **#{0}\n\n🥀Parça:** {1}\n**⏱Süre:** {2}\n👤**Talep Eden: {3}**"
 queue_5 : "Sırada Sadece Bir Parça Var, Lütfen Biraz Daha Parça Ekleyin. 🔮"
 
-stream_1 : "🥀**Parça**: {0} \n**⌛Süre**: {2}\n**👤Talep Eden**: {3}"
-stream_2 : " **Yayın Başlatıldı** \n**Başlık**: {0}\n**⌛Süre**: {2}\n**👤Talep Eden**: {3}"
-stream_3 : "🥀**Parça**: {0}\n**⌛Süre**: {1}\n**👤Talep Eden**: {2}"
-stream_4 : "🥀**Parça**: [{0}]\n**⌛Süre**: {2}\n**👤Talep Eden**: {3}"
+stream_1 : "🥀**Parça**: {0} \n**⏱Süre**: {2}\n**👤Talep Eden**: {3}"
+stream_2 : " **Yayın Başlatıldı** \n**Başlık**: {0}\n**⏱Süre**: {2}\n**👤Talep Eden**: {3}"
+stream_3 : "🥀**Parça**: {0}\n**⏱Süre**: {1}\n**👤Talep Eden**: {2}"
+stream_4 : "🥀**Parça**: [{0}]\n**⏱Süre**: {2}\n**👤Talep Eden**: {3}"
 stream_5 : "🥀**Parça**: {0}\n**👤Talep Eden**:{1}"
 stream_6 : " **Yayın Başlatıldı**  \n**Parça**: [{0}]({1})\n**👤Talep Eden**: {2}"
 
@@ -279,7 +279,7 @@ P_B_4 : "🎵 Oynatma Listelerimi Oynat"
 #Playlist
 PL_B_1 : "⚡ Oynatma listelerimi oynat"
 PL_B_2 : "❤️‍🩹 Listeme Ekle"
-PL_B_3 : "🎛️ Kontrol Paneli"
+PL_B_3 : "⚙️ Kontrol Paneli"
 PL_B_4 : "📡 Oynatma Modu"
 PL_B_5 : "🔄 Tüm Listeyi Sil"
 PL_B_6 : "↗️ Oynatma Listesini Sil"
