--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -36,7 +36,7 @@ auth_7 : "**Yetkili Kullanıcılar Listesi[AUL]:**\n\n"
 auth_8 : "┗ Tarafından eklendi:-"
 
 # PLUGINS - Admins
-admin_1 : "Müzik Zaten Duraklatıldı. 🔮"
+admin_1 : "Müzik Zaten Duraklatıldı. 🥀"
 admin_2 : "🎧 Sesli Sohbet Duraklatıldı {}!"
 admin_3 : "Müzik zaten yeniden başlatıldı."
 admin_4 : "🎧 Sesli Sohbeti Sürdüren {}!"
@@ -76,7 +76,7 @@ admin_34 : "İleri Sarılırken Hata Oluştu."
 # Start
 start_1 : "**Beni {0} Grubunuza Davet Ettiğiniz İçin Teşekkürler.\n{1} Çalışıyor. ❤️‍🔥\n\nHerhangi Bir Yardım Almak İçin Destek Grubumuza Veya Kanalımıza Göz Atın.**"
 start_2 : "**{0}'una Hoş Geldiniz. 🔮\n\nGrubunuza Ekleyerek Sesli Sohbetlerinizde Kaliteli Müzik Dinleyebilirsiniz.**"
-start_3 : "**Beni Grubunuza Davet Ettiğiniz İçin Teşekkürler.**\n\n**Çalışmak için Sadece Sesli sohbetleri Yönetme ve Gruba Davet Etme Yetkisi Vermeniz Yeterlidir.** 🔮\n\n**Asistan Kullanıcı Adı:** @{1}"
+start_3 : "**Beni Grubunuza Davet Ettiğiniz İçin Teşekkürler.**\n\n**Çalışmak için Sadece Sesli sohbetleri Yönetme ve Gruba Davet Etme Yetkisi Vermeniz Yeterlidir.** 🥀\n\n**Asistan Kullanıcı Adı:** @{1}"
 start_4 : "**{0}'un Sahibi {1} Sohbetinize Katıldı.** 👑"
 start_5 : "**{0}'i Çok Kıymetli {1} Beyefendinin Grubunuza Katıldığını Fark Etti. Kendisine Saygılarımı Sunarım.** 🙏"
 start_6 : "❗️ **Süper Grup Gerekli** ❗️ Lütfen Grubunuzu **Süper Gruba** dönüştürün ve sonra beni tekrar ekleyin. \n\n**Süper grup nasıl yapılır? 1-** Üyeler listesine gelin ve sağ üstteki kalem işaretine basın.\n**2-** Yeni üyeler için sohbet geçmişi ayarını Görünür olarak düzenleyin. Şimdi botu tekrar ekleyebilirsiniz"
@@ -146,11 +146,11 @@ play_3 : "Sorgu İşlenemedi! Başka Bir Parça Oynatmayı Deneyiniz. 🥀"
 play_4 : "🖇 **Yalnızca Yöneticiler Oynatır**\nYalnızca Yöneticiler ve Yetkilendirilmiş Kullanıcılar bu grupta müzik çalabilir.\n\nModu /playmode aracılığıyla değiştirin ve zaten yöneticiyseniz, /admincache aracılığıyla admincache'i yeniden yükleyin"
 play_5 : "Ses dosyası işlenemedi.\n\nSes Dosyası Boyutu 100 mb'den Küçük Olmalı 🔮"
 play_6 : "**Süre Sınırı Aşıldı**\n\n**İzin Verilen Süre: **{0} dakika\n**Alınan Süre:** {1} dakika(s)"
-play_7 : "**Üzgünüm! Şu Anda Birçok Grup Videolu Sohbet Açmış. Sunucu Gücü Daha Fazla Video Oynatmaya Yetmiyor. \n\nDaha Güçlü Sunucu Alabilmemize Destek Olmak İçin @Blayzen İle İletişime Geçin.** 🎩"
+play_7 : "**Üzgünüm! Şu Anda Birçok Grup Videolu Sohbet Açmış. Sunucu Gücü Daha Fazla Video Oynatmaya Yetmiyor. \n\nDaha Güçlü Sunucu Alabilmemize Destek Olmak İçin @Blayzen İle İletişime Geçin.** 🥀"
 play_8 : "Geçerli Bir Video Dosyası Uzantısı Değil!\n\n**Desteklenen Biçimler:** {0}"
 play_9 : "Video Dosya Boyutu 1 GB'den Küçük Olmalı. 🔮"
 play_10 : "**Youtube Oynatma Listesi Özelliği**\n\nYoutube Oynatma Listesinin tamamını oynatmak istediğiniz Modu seçin"
-play_11 : "🔮Başlık: **{0}\n\n⌛Süre:** {1} Dakika"
+play_11 : "🔮Başlık: **{0}\n\n⏱Süre:** {1} Dakika"
 play_12 : "**Spotify Oynatma Listeleri**\n\n👤Talep Eden:- {0}"
 play_13 : "**Apple Oynatma Listeleri**\n\n👤Talep Eden:- {0}"
 play_14 : "**URL doğrulanamıyor.**\nBot, bu url'nin şu platformlardan birine ait olup olmadığını merak ediyor: Youtube, AppleMusic, Spotify, Resso ve Soundcloud.\n\nM3u8 veya Uzak Bağlantılar için /stream'i kullanabilirsiniz.."
@@ -168,12 +168,12 @@ playlist_4 : "Getirilen Oynatma Listesi:\n\n"
 playlist_5 :  "    Süre - {0} Dakika"
 playlist_6 : "Çalma Listelerini silmek için PM'den bana ulaşın."
 playlist_7 : "Çalma Listesindeki Parçalar: {0}\n\nÇalma Listenizdeki Belirli Bir Parçayı Silmek İçin Butonlara Basın.\n\nTüm Çalma Listesini Silmek İçin: Del Butonuna Basın."
-playlist_8 : "Zaten Var\n\nBu parça çalma listenizde var. 🔮"
+playlist_8 : "Zaten Var\n\nBu parça çalma listenizde var. 🥀"
 playlist_9 : "Üzgünüm! Bir oynatma listesinde yalnızca {0} müziğiniz olabilir."
 playlist_10 : "Oynatma Listesi Ekleme\n\n{0}\ Oynatma Listenize Eklendi."
-playlist_11 : "Listeniz başarıyla silindi. 🔮"
+playlist_11 : "Listeniz başarıyla silindi. 🥀"
 playlist_12 : "Listeniz silinemedi."
-playlist_13 : "Tüm çalma listeleriniz sunucudan silindi. 🔮"
+playlist_13 : "Tüm çalma listeleriniz sunucudan silindi. 🥀"
 playlist_14 : "**Tüm oynatma listenizi silmek istediğinizden emin misiniz?**\n\nOynatma listenizi kaybedeceksiniz ve bu daha sonra kurtarılamaz."
 playlist_15 : "[Tüm Oynatma Listesini Kontrol Et]({0})"
 playlist_16 : "Sıraya Alınmış Oynatma Listesi:"
@@ -183,7 +183,7 @@ playlist_18 : "[Tüm Sıradaki Oynatma Listesini Kontrol Et]({0})\n\nSon Sırada
 
 #Playmode
 playmode_1 : "**Grubunuzdaki Müzikleri Oynatmak istediğiniz Modu Seçin[{0}].**"
-playmode_2 : "Ayarlar {0} tarafından başarıyla değiştirildi ve kaydedildi. 🔮"
+playmode_2 : "Ayarlar {0} tarafından başarıyla değiştirildi ve kaydedildi. 🥀"
 
 #Stream 
 str_1 : "Lütfen M3u8 Bağlantıları veya Dizin Bağlantıları Sağlayın."
@@ -391,7 +391,7 @@ vidmode_3 : "Video Oynatma Modu m3u8 olarak ayarlandı. Bot şimdi parçaları c
 
 #broadcast
 broad_1 : "**Bottan {1} Pinli {0} Sohbette Yayınlanan Mesaj. 🔮**"
-broad_2 : "Asistan Yayını Başlatıldı...🎭"
+broad_2 : "Asistan Yayını Başlatıldı...🥀"
 broad_3 : "**Yardımcı Yayın:**\n\n"
 broad_4 : "Asistan 1, {0} sohbette yayınlandı\n"
 broad_5 : "Asistan 2, {0} sohbette yayınlandı\n"
