--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -6,7 +6,7 @@ general_2 : "Hata! Komutun Yanlış Kullanımı."
 general_3 : "İşleminiz Gerçekleşirken Hata Oluştu. **Lütfen Bota Yönetici Yetkisi Verin**.\n\nHata Türü: - {0}"
 general_4 : "Bu sohbet grubunda isimsiz bir yöneticisiniz!\nYönetici Haklarından Kullanıcı Hesabına geri dönün."
 general_5 : "Bu eylemi gerçekleştirmek için sesli sohbet haklarına sahip yönetici olmanız gerekir."
-general_6 : "Bot sesli sohbette yayın yapmıyor. 🔮"
+general_6 : "Bot sesli sohbette yayın yapmıyor. 🥀"
 
 # Classes - Telegram.py
 tg_1 : "Bot şu anda indirilenlerle **Aşırı yüklenmiş**. @Blayzen hesabına düzeltmesi için bu mesajı bildiriniz.\n\n**Deneme Süresi:** {0} (__beklenen süre__))"
@@ -44,15 +44,15 @@ admin_5 : "Müziğin sesi zaten kapalı."
 admin_6 : "🎧 Sesli Sohbetin Sesi Kapatıldı {}!"
 admin_7 : "Müziğin sesi zaten açıldı."
 admin_8 : "🎧 Sesli Sohbetin Sesi Açıldı {}!"
-admin_9 : "🎧 **Sesli Sohbeti Bitiren/Durduran {} 🔮**"
-admin_10 : "🎧 Sesli Sohbet {} tarafından atlandı!. Sırada Artık Müzik Yok. 🔮"
+admin_9 : "🎧 **Sesli Sohbeti Bitiren/Durduran {} 🥀**"
+admin_10 : "🎧 Sesli Sohbet {} tarafından atlandı!. Sırada Artık Müzik Yok. 🥀"
 admin_11 : "Akış **{0}** olarak değiştirilirken hata oluştu\n\nLütfen /atla komutunu tekrar kullanın."
 admin_12 : "Döngü çalmanın etkinleştirilmesi nedeniyle belirli bir parçaya geçilemiyor. Bu özelliği kullanmak için lütfen döngüsel oynatmayı `/dongu disable` üzerinden devre dışı bırakın."
-admin_13 : "Lütfen 1, 2 veya 4 gibi belirli parçalar için sayısal sayılar kullanın. 🔮"
-admin_14 : "Belirli bir numaraya atlamak için sırada en az 2 parça gerekir. /queue ile sırayı kontrol et 🔮"
+admin_13 : "Lütfen 1, 2 veya 4 gibi belirli parçalar için sayısal sayılar kullanın. 🥀"
+admin_14 : "Belirli bir numaraya atlamak için sırada en az 2 parça gerekir. /queue ile sırayı kontrol et 🥀"
 admin_15 : "Verdiğiniz değer için sırada yeterli parça yok. Lütfen 1 ile {0} arasında bir sayı seçin"
 admin_16 : "Belirli bir parçaya geçilemedi.\n\nSırayı /sira İle Kontrol Edin"
-admin_17 : "{0}.. Lütfen bekleyin. 🔮"
+admin_17 : "{0}.. Lütfen bekleyin. 🥀"
 admin_18 : "Yönetici Listesi Bulunamadı\n\nLütfen yönetici listesini /admincache veya /reload yoluyla yeniden yükleyin. ❤️‍🩹"
 admin_19 : "Bunu gerçekleştirmek için sesli sohbet haklarına sahip yönetici olmanız gerekir.\nZaten yöneticiyseniz, /admincache aracılığıyla admincache'i yeniden yükleyin. 🔮"
 admin_20 : "**Yönetici önbelleği başarıyla yeniden yüklendi.** ❤️‍🩹"
@@ -60,14 +60,14 @@ admin_21 : "Sırada karıştırılacak bir şey yok ❌"
 admin_22 : "Karıştırılamadı.\n\nSırayı kontrol edin: /sira"
 admin_23 : "**Sıra Karıştırıldı: {0}**\n\nKarıştırılan sırayı kontrol edin: /sira"
 admin_24 : "**Kullanım:**\n/dongu [1-10 arası sayı]\n\n**Örnek:** /dongu 5"
-admin_25 : "Döngü, {0} tarafından **{1}** kez etkinleştirildi. Bot şimdi sesli sohbette çalmakta olan müziği **{1}** kez tekrarlayacak. 🔮"
+admin_25 : "Döngü, {0} tarafından **{1}** kez etkinleştirildi. Bot şimdi sesli sohbette çalmakta olan müziği **{1}** kez tekrarlayacak. 🥀"
 admin_26 : "Döngü oynatma için lütfen 1-10 arasındaki sayıları kullanın"
-admin_27 : "Döngü Oynatma devre dışı bırakıldı. 🔮"
+admin_27 : "Döngü Oynatma devre dışı bırakıldı. 🥀"
 admin_28 : "**Kullanım:**\n/ilerisar : Müziği İleri Sarar. (Örnek: /ilerisar 15 İle Çalan Müziği 15 Saniye İleri Alabilirsiniz.)"
 admin_29 : "Lütfen Kaç Saniye İleri Alacaksanız Yazın. Örnek: /ilerisar 15 İle Çalan Müziği 15 Saniye İleri Alabilirsiniz."
 admin_30 : "Üzgünüm Bunu İleri Alamazsınız Ama /atla Yazarak Müziği Geçebilirsiniz."
 admin_31 : "Sayıyı Biraz Az Gir, Su Yakmıyor Bu Da Bir Bot Sonuçta.\n\nŞu An Oynatılan** {0}** dakika **{1}** dakikanın"
-admin_32 : "**Lütfen Bekleyin... ileri Alınıyor...** 🔮"
+admin_32 : "**Lütfen Bekleyin... ileri Alınıyor...** 🥀"
 admin_33 : "Şarkının {0} Dakikasına Atlandı. "
 admin_34 : "İleri Sarılırken Hata Oluştu."
 
@@ -75,7 +75,7 @@ admin_34 : "İleri Sarılırken Hata Oluştu."
 
 # Start
 start_1 : "**Beni {0} Grubunuza Davet Ettiğiniz İçin Teşekkürler.\n{1} Çalışıyor. ❤️‍🔥\n\nHerhangi Bir Yardım Almak İçin Destek Grubumuza Veya Kanalımıza Göz Atın.**"
-start_2 : "**{0}'una Hoş Geldiniz. 🔮\n\nGrubunuza Ekleyerek Sesli Sohbetlerinizde Kaliteli Müzik Dinleyebilirsiniz.**"
+start_2 : "**{0}'una Hoş Geldiniz. 🥀\n\nGrubunuza Ekleyerek Sesli Sohbetlerinizde Kaliteli Müzik Dinleyebilirsiniz.**"
 start_3 : "**Beni Grubunuza Davet Ettiğiniz İçin Teşekkürler.**\n\n**Çalışmak için Sadece Sesli sohbetleri Yönetme ve Gruba Davet Etme Yetkisi Vermeniz Yeterlidir.** 🥀\n\n**Asistan Kullanıcı Adı:** @{1}"
 start_4 : "**{0}'un Sahibi {1} Sohbetinize Katıldı.** 👑"
 start_5 : "**{0}'i Çok Kıymetli {1} Beyefendinin Grubunuza Katıldığını Fark Etti. Kendisine Saygılarımı Sunarım.** 🙏"
@@ -84,11 +84,11 @@ start_7 : "**Pulse Music Botun Grup Kapasitesi doldu** \n [Buraya Tıklayarak Ye
 
 # Help
 help_1 : "**Komutlar ve Öğreticileri Görmek İçin Aşağadaki Butonları Kullanınız 🔮**\n\nGrup Üyelerinin Sadece Oynatma Komutlarını, Grup Adminlerininse Ayrıca Admin Komutlarını İncelemeleri Yeterli Olacaktır. "
-help_2 : "**Yardım İçin Butona Tıklayın** 🔮"
+help_2 : "**Yardım İçin Butona Tıklayın** 🥀"
 
 # Settings
 setting_1 : "⚙️ **Müzik Botu Ayarları**\n\n🔮**Düzenlemek Veya Değiştirmek İstediğiniz Ayarları Aşağıdan Butonları Kullanarak Ayarlayabilirsiniz.**"
-setting_3 : "⁉️ Bu Nedir?\n\n1) Doğrudan: Arama sorgularını doğrudan oynatır. Videoları doğrudan modda oynatmak için -v kullanın.\n\n2) Satır İçi: Video ve ses arasında seçim yapmak için Satır İçi İşaretleme Düğmelerini Döndürür. 🔮"
+setting_3 : "⁉️ Bu Nedir?\n\n1) Doğrudan: Arama sorgularını doğrudan oynatır. Videoları doğrudan modda oynatmak için -v kullanın.\n\n2) Satır İçi: Video ve ses arasında seçim yapmak için Satır İçi İşaretleme Düğmelerini Döndürür. 🥀"
 setting_4 : "⁉️ Bu Nedir?\n\n👥 Herkes: Bu grupta bulunan yönetici komutlarını (skip, pause, resume vb.) herkes kullanabilir.\n\n🙍 Yalnızca Yönetici: Yalnızca yöneticiler ve yetkili kullanıcılar yönetici komutlarını kullanabilir."
 setting_5 : "Yetkili Kullanıcı Bulunamadı\n\nYönetici olmayan herhangi bir kişinin /auth ile yönetici komutlarımı kullanmasına ve /unauth kullanarak kullanmamasına izin verebilirsiniz"
 setting_9 : "⁉️ Bu Nedir?\n\nEtkinleştirildiğinde Bot, sohbetinizi temiz ve anlaşılır kılmak için {0} tarihinden sonra mesajını siler.."
@@ -113,17 +113,17 @@ set_cb_8 : "Geri Alınıyor ♻️"
 ustats_1 : "Kullanıcı istatistikleri bulunamadı. 😔"
 ustats_2 : "Güzel!, Şu Ana Kadar **{0}** Parçayı **{1}** Kez Oynattın.\n\nTop {2} Parçan:\n\n"
 
-gstats_1 : "**Global İstatistikler Geliyor, Bu Biraz Zaman Alabilir...** 🔮"
+gstats_1 : "**Global İstatistikler Geliyor, Bu Biraz Zaman Alabilir...** 🥀"
 gstats_2 : "İstatistik Bulunamadı."
-gstats_3 : "**Global Top 10 {0} , Bu Biraz Zaman Alabilir...** 🔮"
+gstats_3 : "**Global Top 10 {0} , Bu Biraz Zaman Alabilir...** 🥀"
 gstats_4 : "**Bottaki Toplam İşlem Sayısı:** {0}\n\n{1} Şu Ana Kadar **{2}** Parçayı **{3}** Kez Çaldı.\n\n**Top {4} Parça:**\n"
 gstats_5 : "**Top {0} Grup {1}:**\n\n"
 gstats_6 : "**Top {0} Kullanıcı {1}:**\n\n"
 gstats_7 : "Bu Grupta **{0}** Parça **{1}** Kez Çaldı.\n\nGruptaki Top {2} Parça :\n\n"
-gstats_8 : "**İstatistikler Yükleniyor... Bu Biraz Zaman Alabilir... 🔮**"
-gstats_9 : "**BOTTAKİ TOP10 İSTATİSTİKLER**\n\nButonları Kullanarak İstediğiniz İstatistiği Görebilirsiniz. 🔮"
-gstats_10 : "**Global İstatistikler {0}**\n\nButonları Kullanarak İstediğiniz İstatistiği Görebilirsiniz. 🔮"
-gstats_11 : "** {0}unun Genel İstatistiklerini Görmek İçin Aşağıdaki Butona Tıklayabilirsiniz.** 🔮"
+gstats_8 : "**İstatistikler Yükleniyor... Bu Biraz Zaman Alabilir... 🥀**"
+gstats_9 : "**BOTTAKİ TOP10 İSTATİSTİKLER**\n\nButonları Kullanarak İstediğiniz İstatistiği Görebilirsiniz. 🥀"
+gstats_10 : "**Global İstatistikler {0}**\n\nButonları Kullanarak İstediğiniz İstatistiği Görebilirsiniz. 🥀"
+gstats_11 : "** {0}unun Genel İstatistiklerini Görmek İçin Aşağıdaki Butona Tıklayabilirsiniz.** 🥀"
 
 
 # Play 
@@ -148,7 +148,7 @@ play_5 : "Ses dosyası işlenemedi.\n\nSes Dosyası Boyutu 100 mb'den Küçük O
 play_6 : "**Süre Sınırı Aşıldı**\n\n**İzin Verilen Süre: **{0} dakika\n**Alınan Süre:** {1} dakika(s)"
 play_7 : "**Üzgünüm! Şu Anda Birçok Grup Videolu Sohbet Açmış. Sunucu Gücü Daha Fazla Video Oynatmaya Yetmiyor. \n\nDaha Güçlü Sunucu Alabilmemize Destek Olmak İçin @Blayzen İle İletişime Geçin.** 🥀"
 play_8 : "Geçerli Bir Video Dosyası Uzantısı Değil!\n\n**Desteklenen Biçimler:** {0}"
-play_9 : "Video Dosya Boyutu 1 GB'den Küçük Olmalı. 🔮"
+play_9 : "Video Dosya Boyutu 1 GB'den Küçük Olmalı. 🥀"
 play_10 : "**Youtube Oynatma Listesi Özelliği**\n\nYoutube Oynatma Listesinin tamamını oynatmak istediğiniz Modu seçin"
 play_11 : "🔮Başlık: **{0}\n\n⏱Süre:** {1} Dakika"
 play_12 : "**Spotify Oynatma Listeleri**\n\n👤Talep Eden:- {0}"
@@ -161,9 +161,9 @@ play_18 : "**Aktif Sesli Sohbet Bulunamadı Lütfen Üyeler Kısmına Girip Sağ
 
 
 #Playlist
-playlist_1 : "**Kullanım:** /oynat [Müzik Adı veya Youtube Bağlantısı veya Sesi Yanıtla]\n\n**Bot'un Oynatma Listelerini Oynatmak İstiyorsanız Aşağıdaki Butonları Kullanın.** 🔮"
-playlist_2 : "**Çalma listeniz alınıyor. Lütfen bekleyin...** 🔮"
-playlist_3 : "Bot Sunucusunda oynatma listeniz yok. 🔮"
+playlist_1 : "**Kullanım:** /oynat [Müzik Adı veya Youtube Bağlantısı veya Sesi Yanıtla]\n\n**Bot'un Oynatma Listelerini Oynatmak İstiyorsanız Aşağıdaki Butonları Kullanın.** ❤️‍🩹"
+playlist_2 : "**Çalma listeniz alınıyor. Lütfen bekleyin...** 🥀"
+playlist_3 : "Bot Sunucusunda oynatma listeniz yok. 🥀"
 playlist_4 : "Getirilen Oynatma Listesi:\n\n"
 playlist_5 :  "    Süre - {0} Dakika"
 playlist_6 : "Çalma Listelerini silmek için PM'den bana ulaşın."
@@ -191,7 +191,7 @@ str_2 : "✅ Geçerli Akış Doğrulandı\n\nLütfen bağlantının işlenmesini
 str_3 : "Youtube canlı yayın akışı yapılamıyor. Canlı Biçim Bulunamadı"
 
 #TopPlay
-tracks_1 : "**{0} En Çok Oynatılan 10 Şarkı Başlamak Üzere, Lütfen Hazır Olana Kadar Bekleyin... 🔮 **\n\n**👉Talep Eden:** {1}"
+tracks_1 : "**{0} En Çok Oynatılan 10 Şarkı Başlamak Üzere, Lütfen Hazır Olana Kadar Bekleyin... 🥀 **\n\n**👤Talep Eden:** {1}"
 tracks_2 : "**Hata**\n\nBot'un sunucularında **{0} En İyi 10 Oynatma Listesi** yok. Lütfen başka bir oynatma listesi deneyin"
 
 
@@ -205,7 +205,7 @@ lyrics_4 : "Grubu spama sokmaktan kaçınmak için aşağıdaki düğmeyi tıkla
 
 #Ping
 ping_1 : "🏓Pong!!!!"
-ping_2 : "**🔮 {0} 🔮\nGecikme: `{1}` ms\nUpTime: {2}\nDepolama: {3}\nCpu: {4}\nRam: {5}\nPython: `{6}` ms 🔮**"
+ping_2 : "**🥀 {0} 🥀\nGecikme: `{1}` ms\nUpTime: {2}\nDepolama: {3}\nCpu: {4}\nRam: {5}\nPython: `{6}` ms 🔮**"
 
 # Song
 song_1 : "YouTube'dan Müzik veya Video'yu yalnızca özel sohbette indirebilirsiniz. Lütfen beni özel sohbette başlat. 🔮"
