--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -225,12 +225,12 @@ queue_1 : "**Lütfen Bekleyin.. Sıra Alınıyor...** 🔮"
 queue_2 : "Sırada Malesef Hiçbir Şey Yok. 😔"
 queue_3 : "<u>**Sıradaki Parçalar:</u>**  [Sıradaki Parçalara Burdan Bakabilirsiniz]({0})"
 queue_4 : "❤️‍🩹 Sıraya eklendi **#{0}\n\n🔮Başlık:** {1}\n**⏱Süre:** {2}\n👤**Talep Eden: {3}**"
-queue_5 : "Sırada Sadece Bir Parça Var, Lütfen Biraz Daha Parça Ekleyin. 🔮"
+queue_5 : "Sırada Sadece Bir Parça Var, Lütfen Biraz Daha Parça Ekleyin. 🎧"
 
-stream_1 : "🔮**Başlık**: {0} \n**⏱Süre**: {2}\n**👤Talep Eden**: {3}"
-stream_2 : " **Yayın Başlatıldı** \n**Başlık**: {0}\n**⏱Süre**: {2}\n**👤Talep Eden**: {3}"
-stream_3 : "🔮**Başlık**: {0}\n**⏱Süre**: {1}\n**👤Talep Eden**: {2}"
-stream_4 : "🔮**Başlık**: [{0}]\n**⏱Süre**: {2}\n**👤Talep Eden**: {3}"
+stream_1 : "🔮**Başlık**: {0} \n**⌛️Süre**: {2}\n**👤Talep Eden**: {3}"
+stream_2 : " **Yayın Başlatıldı** \n**Başlık**: {0}\n**⌛️Süre**: {2}\n**👤Talep Eden**: {3}"
+stream_3 : "🔮**Başlık**: {0}\n**⌛️Süre**: {1}\n**👤Talep Eden**: {2}"
+stream_4 : "🔮**Başlık**: [{0}]\n**⌛️Süre**: {2}\n**👤Talep Eden**: {3}"
 stream_5 : "🔮**Başlık**: {0}\n**👤Talep Eden**:{1}"
 stream_6 : " **Yayın Başlatıldı**  \n**Parça**: [{0}]({1})\n**👤Talep Eden**: {2}"
 
