--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -278,7 +278,7 @@ P_B_4 : "🎵 Oynatma Listelerimi Oynat"
 
 #Playlist
 PL_B_1 : "⚡ Oynatma listelerimi oynat"
-PL_B_2 : "❤️‍🩹 Listeme Ekle"
+PL_B_2 : "✅ Listeme Ekle"
 PL_B_3 : "⚙️ Kontrol Paneli"
 PL_B_4 : "📡 Oynatma Modu"
 PL_B_5 : "🔄 Tüm Listeyi Sil"
