--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -254,7 +254,7 @@ S_B_3 : "🎉 Destek Grubu"
 S_B_4 : "🎩 Duyuru"
 S_B_5 : "✚ Beni Grubuna Ekle ✚"
 S_B_6 : "💡 Git Repo"
-S_B_7 : "💻 Developer"
+S_B_7 : "🌹 Developer"
 S_B_8 : "🔮 Komutlar Menüsü"
 
 #Help 
