--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -6,7 +6,7 @@ general_2 : "Hata! Komutun Yanlış Kullanımı."
 general_3 : "İşleminiz Gerçekleşirken Hata Oluştu. **Lütfen Bota Yönetici Yetkisi Verin**.\n\nHata Türü: - {0}"
 general_4 : "Bu sohbet grubunda isimsiz bir yöneticisiniz!\nYönetici Haklarından Kullanıcı Hesabına geri dönün."
 general_5 : "Bu eylemi gerçekleştirmek için sesli sohbet haklarına sahip yönetici olmanız gerekir."
-general_6 : "Bot sesli sohbette yayın yapmıyor. 🌹"
+general_6 : "Bot sesli sohbette yayın yapmıyor. ❄️"
 
 # Classes - Telegram.py
 tg_1 : "Bot şu anda indirilenlerle **Aşırı yüklenmiş**. @Blayzen hesabına düzeltmesi için bu mesajı bildiriniz.\n\n**Deneme Süresi:** {0} (__beklenen süre__))"
@@ -17,7 +17,7 @@ call_1 : "Bot, asistan hesabını grubunuza davet etmek için **Yönetici** İzn
 call_2 : "**Asistanı Grubunuzda yasaklamışsınız**, lütfen yasağı kaldırın! \nAsistanın bilgileri aşağıda unban yaparsanız tekrar katılabilir. Veya grup ayarlarında çıkarılan kullanıcılar listesinde asistanı bulup engeli kaldırın. Yapamazsanız @Blayzen hesabına ulaşın.\n\n**Asistan Kullanıcı Adı:** @{0}\n**Asistan ID:** {1}"
 call_3 : "Asistan Hesabı sohbetinize katılırken sorun oluştu.\nLütfen @{0} hesabını gruba kendiniz ekleyin veya @Blayzen hesabına yazın.\n\n**Sistem Notu**: {1}"
 call_4 : "Bot, asistan hesabını sohbet grubunuza davet etmek için **Kullanıcıları Bağlantı Yoluyla Davet Et** Yetkisi gerektirir.\nLütfen bota davet yetkisi verin."
-call_5 : "**Asistan Hesabı 5 Saniye içinde katılacak.. Lütfen Bekleyin.** 🌹"
+call_5 : "**Asistan Hesabı 5 Saniye içinde katılacak.. Lütfen Bekleyin.** ❄️"
 call_6 : "**Asistan Hesabı [{0}] Başarıyla Katıldı. ✅\n\nMüzik Şimdi Başlatılıyor.**"
 call_7 : "**Zararlı Yönetici Hakkı Verildi **\n\nLütfen ** KULLANICILARI YASAK** haklarını bottan kaldırın."
 call_8 : "**Zararlı Yönetici Hakkı Verildi **\n\nLütfen bottan **YENİ YÖNETİCİLER EKLE** haklarını kaldırın."
@@ -48,43 +48,43 @@ admin_9 : "🎧 **Sesli Sohbeti Bitiren/Durduran {} 🔮**"
 admin_10 : "🎧 Sesli Sohbet {} tarafından atlandı!. Sırada Artık Müzik Yok. 🔮"
 admin_11 : "Akış **{0}** olarak değiştirilirken hata oluştu\n\nLütfen /atla komutunu tekrar kullanın."
 admin_12 : "Döngü çalmanın etkinleştirilmesi nedeniyle belirli bir parçaya geçilemiyor. Bu özelliği kullanmak için lütfen döngüsel oynatmayı `/dongu disable` üzerinden devre dışı bırakın."
-admin_13 : "Lütfen 1, 2 veya 4 gibi belirli parçalar için sayısal sayılar kullanın. 🌹"
-admin_14 : "Belirli bir numaraya atlamak için sırada en az 2 parça gerekir. /queue ile sırayı kontrol et 🌹"
+admin_13 : "Lütfen 1, 2 veya 4 gibi belirli parçalar için sayısal sayılar kullanın. ❄️"
+admin_14 : "Belirli bir numaraya atlamak için sırada en az 2 parça gerekir. /queue ile sırayı kontrol et ❄️"
 admin_15 : "Verdiğiniz değer için sırada yeterli parça yok. Lütfen 1 ile {0} arasında bir sayı seçin"
 admin_16 : "Belirli bir parçaya geçilemedi.\n\nSırayı /sira İle Kontrol Edin"
 admin_17 : "{0}.. Lütfen bekleyin. 🔮"
 admin_18 : "Yönetici Listesi Bulunamadı\n\nLütfen yönetici listesini /admincache veya /reload yoluyla yeniden yükleyin. 🔮"
 admin_19 : "Bunu gerçekleştirmek için sesli sohbet haklarına sahip yönetici olmanız gerekir.\nZaten yöneticiyseniz, /admincache aracılığıyla admincache'i yeniden yükleyin. 🔮"
-admin_20 : "**Yönetici önbelleği başarıyla yeniden yüklendi.** 🌹"
+admin_20 : "**Yönetici önbelleği başarıyla yeniden yüklendi.** ❄️"
 admin_21 : "Sırada karıştırılacak bir şey yok ❌"
 admin_22 : "Karıştırılamadı.\n\nSırayı kontrol edin: /sira"
 admin_23 : "**Sıra Karıştırıldı: {0}**\n\nKarıştırılan sırayı kontrol edin: /sira"
 admin_24 : "**Kullanım:**\n/dongu [1-10 arası sayı]\n\n**Örnek:** /dongu 5"
-admin_25 : "Döngü, {0} tarafından **{1}** kez etkinleştirildi. Bot şimdi sesli sohbette çalmakta olan müziği **{1}** kez tekrarlayacak. 🥀"
+admin_25 : "Döngü, {0} tarafından **{1}** kez etkinleştirildi. Bot şimdi sesli sohbette çalmakta olan müziği **{1}** kez tekrarlayacak. ❄️"
 admin_26 : "Döngü oynatma için lütfen 1-10 arasındaki sayıları kullanın"
 admin_27 : "Döngü Oynatma devre dışı bırakıldı. 🔮"
 admin_28 : "**Kullanım:**\n/ilerisar : Müziği İleri Sarar. (Örnek: /ilerisar 15 İle Çalan Müziği 15 Saniye İleri Alabilirsiniz.)"
 admin_29 : "Lütfen Kaç Saniye İleri Alacaksanız Yazın. Örnek: /ilerisar 15 İle Çalan Müziği 15 Saniye İleri Alabilirsiniz."
 admin_30 : "Üzgünüm Bunu İleri Alamazsınız Ama /atla Yazarak Müziği Geçebilirsiniz."
 admin_31 : "Sayıyı Biraz Az Gir, Su Yakmıyor Bu Da Bir Bot Sonuçta.\n\nŞu An Oynatılan** {0}** dakika **{1}** dakikanın"
-admin_32 : "**Lütfen Bekleyin... ileri Alınıyor...** 🌹"
+admin_32 : "**Lütfen Bekleyin... ileri Alınıyor...** ❄️"
 admin_33 : "Şarkının {0} Dakikasına Atlandı. "
 admin_34 : "İleri Sarılırken Hata Oluştu."
 
 # Bot 
 
 # Start
-start_1 : "**Beni {0} Grubunuza Davet Ettiğiniz İçin Teşekkürler.\n{1} Çalışıyor. 🌹\n\nHerhangi Bir Yardım Almak İçin Destek Grubumuza Veya Kanalımıza Göz Atın.**"
-start_2 : "**{0}'e Hoş Geldiniz. 🌹\n\nGrubunuza Ekleyerek Sesli Sohbetlerinizde Kaliteli Müzik Dinleyebilirsiniz.**"
-start_3 : "**Beni Grubunuza Davet Ettiğiniz İçin Teşekkürler.**\n\n**Çalışmak için Sadece Sesli sohbetleri Yönetme ve Gruba Davet Etme Yetkisi Vermeniz Yeterlidir.** 🌹\n\n**Asistan Kullanıcı Adı:** @{1}"
-start_4 : "**{0}'in Sahibi {1} Sohbetinize Katıldı.** 👑"
+start_1 : "**Beni {0} Grubunuza Davet Ettiğiniz İçin Teşekkürler.\n{1} Çalışıyor. ❄️\n\nHerhangi Bir Yardım Almak İçin Destek Grubumuza Veya Kanalımıza Göz Atın.**"
+start_2 : "**{0}'a Hoş Geldiniz. 🔮\n\nGrubunuza Ekleyerek Sesli Sohbetlerinizde Kaliteli Müzik Dinleyebilirsiniz.**"
+start_3 : "**Beni Grubunuza Davet Ettiğiniz İçin Teşekkürler.**\n\n**Çalışmak için Sadece Sesli sohbetleri Yönetme ve Gruba Davet Etme Yetkisi Vermeniz Yeterlidir.** ❄️\n\n**Asistan Kullanıcı Adı:** @{1}"
+start_4 : "**{0}'ın Sahibi {1} Sohbetinize Katıldı.** 👑"
 start_5 : "**{0}'in Çok Kıymetli {1} Beyefendisinin Grubunuza Katıldığını Fark Ettik. Kendisine Saygılarımı Sunarım.** 🙏"
 start_6 : "❗️ **Süper Grup Gerekli** ❗️ Lütfen Grubunuzu **Süper Gruba** dönüştürün ve sonra beni tekrar ekleyin. \n\n**Süper grup nasıl yapılır? 1-** Üyeler listesine gelin ve sağ üstteki kalem işaretine basın.\n**2-** Yeni üyeler için sohbet geçmişi ayarını Görünür olarak düzenleyin. Şimdi botu tekrar ekleyebilirsiniz"
-start_7 : "**Rose Müzik Botunun Grup Kapasitesi doldu** \n [Buraya Tıklayarak Yeni Botu Görebilirsiniz]({0})"
+start_7 : "**Rythim Botunun Grup Kapasitesi doldu** \n [Buraya Tıklayarak Yeni Botu Görebilirsiniz]({0})"
 
 # Help
 help_1 : "**Komutlar ve Öğreticileri Görmek İçin Aşağadaki Butonları Kullanınız 🔮**\n\nGrup Üyelerinin Sadece Oynatma Komutlarını, Grup Adminlerininse Ayrıca Admin Komutlarını İncelemeleri Yeterli Olacaktır. "
-help_2 : "**Yardım İçin Butona Tıklayın** 🌹"
+help_2 : "**Yardım İçin Butona Tıklayın** ❄️"
 
 # Settings
 setting_1 : "⚙️ **Müzik Botu Ayarları**\n\n🔮**Düzenlemek Veya Değiştirmek İstediğiniz Ayarları Aşağıdan Butonları Kullanarak Ayarlayabilirsiniz.**"
@@ -113,14 +113,14 @@ set_cb_8 : "Geri Alınıyor ♻️"
 ustats_1 : "Kullanıcı istatistikleri bulunamadı. 😔"
 ustats_2 : "Güzel!, Şu Ana Kadar **{0}** Parçayı **{1}** Kez Oynattın.\n\nTop {2} Parçan:\n\n"
 
-gstats_1 : "**Global İstatistikler Geliyor, Bu Biraz Zaman Alabilir...** 🌹"
+gstats_1 : "**Global İstatistikler Geliyor, Bu Biraz Zaman Alabilir...** 🔮"
 gstats_2 : "İstatistik Bulunamadı."
-gstats_3 : "**Global Top 10 {0} , Bu Biraz Zaman Alabilir...** 🌹"
+gstats_3 : "**Global Top 10 {0} , Bu Biraz Zaman Alabilir...** ❄️"
 gstats_4 : "**Bottaki Toplam İşlem Sayısı:** {0}\n\n{1} Şu Ana Kadar **{2}** Parçayı **{3}** Kez Çaldı.\n\n**Top {4} Parça:**\n"
 gstats_5 : "**Top {0} Grup {1}:**\n\n"
 gstats_6 : "**Top {0} Kullanıcı {1}:**\n\n"
 gstats_7 : "Bu Grupta **{0}** Parça **{1}** Kez Çaldı.\n\nGruptaki Top {2} Parça :\n\n"
-gstats_8 : "**İstatistikler Yükleniyor... Bu Biraz Zaman Alabilir... 🌹**"
+gstats_8 : "**İstatistikler Yükleniyor... Bu Biraz Zaman Alabilir... ❄️**"
 gstats_9 : "**BOTTAKİ TOP10 İSTATİSTİKLER**\n\nButonları Kullanarak İstediğiniz İstatistiği Görebilirsiniz. 🔮"
 gstats_10 : "**Global İstatistikler {0}**\n\nButonları Kullanarak İstediğiniz İstatistiği Görebilirsiniz. 🔮"
 gstats_11 : "** {0}unun Genel İstatistiklerini Görmek İçin Aşağıdaki Butona Tıklayabilirsiniz.** 🔮"
@@ -254,7 +254,7 @@ S_B_3 : "🎉 Destek Grubu"
 S_B_4 : "🎩 Duyuru"
 S_B_5 : "✚ Beni Grubuna Ekle ✚"
 S_B_6 : "💡 Git Repo"
-S_B_7 : "🌹 Developer"
+S_B_7 : "❄️ Developer"
 S_B_8 : "🔮 Komutlar Menüsü"
 
 #Help 
