--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -1,4 +1,4 @@
-name : English
+name : Türkçe 🇹🇷
 
 # General Strings
 general_1 : "Bir kullanıcının mesajını yanıtlayın veya username/user_id verin."
