--- a/strings/langs/aze.yml
+++ b/strings/langs/aze.yml
@@ -280,7 +280,7 @@ ST_B_2 : "🎥 Video Keyfiyyəti"
 ST_B_3 : "🎩 Auth İstifadəçiləri"
 ST_B_4 : "📱 İdarə paneli"
 ST_B_5 : "▶️ Oyun rejimi"
-ST_B_6 : "🇦🇿 Dil"
+ST_B_6 : "🇹🇷 Diller 🇦🇿"
 ST_B_7 : "🔄 Təmiz rejimi"
 ST_B_8 : "{0} Aşağı Keyfiyyətli Audio"
 ST_B_9 : "{0} Orta Keyfiyyətli Audio"
