--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -295,7 +295,7 @@ ST_B_2 : "🎥 Video Kalitesi"
 ST_B_3 : "⚡️ Yetkili Kullanıcılar"
 ST_B_4 : "📱 Ana Panel"
 ST_B_5 : "▶️ Oynatma Ayarları"
-ST_B_6 : "🇹🇷 Dil"
+ST_B_6 : "🇹🇷 Diller 🇦🇿"
 ST_B_7 : "🗑 Mesaj Silme Modu"
 ST_B_8 : "{0} Düşük Kalite Ses"
 ST_B_9 : "{0} Orta Kalite Ses"
